# mcx

./: .gitignore  CMakeLists.txt  Makefile  README.md  crc16.h  hello.cpp
gui/: CB.xpm  CMakeLists.txt  ChangeLog  DS.xpm  Fz.xpm  LICENSE.txt  LU.xpm  Ld.xpm  MCX.fbp  MCXx.fbp  Makefile  PL.xpm  Sv.xpm  TODO  XB.xpm  XH.xpm  cc.xpm  crc16.cpp  crc16.h  dso.mcx  info.xpm  install_options.ini  lunar.mcx  main.cpp  mcx.exe.manifest  mcx.h  mcx.nsi  mcx.rc  mcx.xpm  mcxcomm.cpp  mcxcomm.h  mcxcomm_linux.cpp  mcxcomm_sim.cpp  mcxcomm_win.cpp  mcxgui.cpp  mcxgui.h  ng.xpm  plan.txt  planetary.mcx  rH.xpm  (+6 more)
gui/res/: CB.png.h  DS.png.h  Fz.png.h  LU.png.h  Ld.png.h  PL.png.h  Sv.png.h  XB.png.h  XH.png.h  cc.png.h  ng.png.h  rH.png.h  rV.png.h  zzz.png.h
hello/: README.txt
